Library Override crash: undo make local #78958

Closed
opened 2020-07-15 18:16:36 +02:00 by Georg K · 7 comments

System Information
Operating system: Linux-5.4.44-1-MANJARO-x86_64-with-glibc2.29 64 Bits
Graphics card: AMD VERDE (DRM 2.50.0, 5.4.44-1-MANJARO, LLVM 10.0.0) X.Org 4.5 (Core Profile) Mesa 20.0.7

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-15 09:06, hash: e8b26a0501
Worked: - (undo doesn't work in this case in 2.83/2.82a)

Short description of error
Blender 2.90 crashes on making a library override local again after undoing making it local.

Exact steps for others to reproduce the error

  • link the material from the source file {F8662182}(File - Link - MAT_Source.blend - Materials - MAT_from2.90)
  • assign the linked material to the default cube
  • shift-click the material override icon of the linked material in the material properties editor
  • click the icon again (to make fully local)
  • undo
  • click the icon again (to make fully local)
  • crash

backtrace:

# Blender 2.90.0, Commit date: 2020-07-15 09:06, Hash e8b26a05018b
Read library:  '/mnt/disk1/MAT_Source.blend', '//MAT_Source.blend', parent '<direct>'  # Info

# backtrace
/home/georg/blender-git/build_linux/bin/blender(BLI_system_backtrace+0x33) [0x3e8a2b3]
/home/georg/blender-git/build_linux/bin/blender() [0xb5885e]
/usr/lib/libc.so.6(+0x3c3e0) [0x7f795d7d23e0]
/home/georg/blender-git/build_linux/bin/blender(BKE_lib_override_library_operations_create+0x1f) [0xba3d8f]
/usr/lib/libtbb.so.2(_ZN3tbb10interface78internal20isolate_within_arenaERNS1_13delegate_baseEl+0x46) [0x7f7964e1a136]
/home/georg/blender-git/build_linux/bin/blender() [0x3e8dc73]
/usr/lib/libtbb.so.2(+0x2c705) [0x7f7964e20705]
/usr/lib/libtbb.so.2(+0x2c9cc) [0x7f7964e209cc]
/home/georg/blender-git/build_linux/bin/blender(BLI_task_pool_work_and_wait+0xe8) [0x3e8da88]
/home/georg/blender-git/build_linux/bin/blender(BKE_lib_override_library_main_operations_create+0xf0) [0xba4250]
/home/georg/blender-git/build_linux/bin/blender(BKE_undosys_step_push_with_type+0x2c) [0x1661a1c]
/home/georg/blender-git/build_linux/bin/blender(ED_undo_push+0x7d) [0x148dfad]
/home/georg/blender-git/build_linux/bin/blender() [0x14e0fcb]
/home/georg/blender-git/build_linux/bin/blender() [0x14a51cd]
/home/georg/blender-git/build_linux/bin/blender() [0x14b6155]
/home/georg/blender-git/build_linux/bin/blender() [0xe2757a]
/home/georg/blender-git/build_linux/bin/blender() [0xe27bec]
/home/georg/blender-git/build_linux/bin/blender(wm_event_do_handlers+0x4ff) [0xe284bf]
/home/georg/blender-git/build_linux/bin/blender(WM_main+0x20) [0xe1eb00]
/home/georg/blender-git/build_linux/bin/blender(main+0x33e) [0xb2ba6e]
/usr/lib/libc.so.6(__libc_start_main+0xf2) [0x7f795d7bd002]
/home/georg/blender-git/build_linux/bin/blender(_start+0x2e) [0xb54e4e]

**System Information** Operating system: Linux-5.4.44-1-MANJARO-x86_64-with-glibc2.29 64 Bits Graphics card: AMD VERDE (DRM 2.50.0, 5.4.44-1-MANJARO, LLVM 10.0.0) X.Org 4.5 (Core Profile) Mesa 20.0.7 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-15 09:06, hash: `e8b26a0501` Worked: - (undo doesn't work in this case in 2.83/2.82a) **Short description of error** Blender 2.90 crashes on making a library override local again after undoing making it local. **Exact steps for others to reproduce the error** - link the material from the source file {[F8662182](https://archive.blender.org/developer/F8662182/MAT_Source.blend)}(File - Link - MAT_Source.blend - Materials - MAT_from2.90) - assign the linked material to the default cube - shift-click the material override icon of the linked material in the material properties editor - click the icon again (to make fully local) - undo - click the icon again (to make fully local) - crash backtrace: ``` # Blender 2.90.0, Commit date: 2020-07-15 09:06, Hash e8b26a05018b Read library: '/mnt/disk1/MAT_Source.blend', '//MAT_Source.blend', parent '<direct>' # Info # backtrace /home/georg/blender-git/build_linux/bin/blender(BLI_system_backtrace+0x33) [0x3e8a2b3] /home/georg/blender-git/build_linux/bin/blender() [0xb5885e] /usr/lib/libc.so.6(+0x3c3e0) [0x7f795d7d23e0] /home/georg/blender-git/build_linux/bin/blender(BKE_lib_override_library_operations_create+0x1f) [0xba3d8f] /usr/lib/libtbb.so.2(_ZN3tbb10interface78internal20isolate_within_arenaERNS1_13delegate_baseEl+0x46) [0x7f7964e1a136] /home/georg/blender-git/build_linux/bin/blender() [0x3e8dc73] /usr/lib/libtbb.so.2(+0x2c705) [0x7f7964e20705] /usr/lib/libtbb.so.2(+0x2c9cc) [0x7f7964e209cc] /home/georg/blender-git/build_linux/bin/blender(BLI_task_pool_work_and_wait+0xe8) [0x3e8da88] /home/georg/blender-git/build_linux/bin/blender(BKE_lib_override_library_main_operations_create+0xf0) [0xba4250] /home/georg/blender-git/build_linux/bin/blender(BKE_undosys_step_push_with_type+0x2c) [0x1661a1c] /home/georg/blender-git/build_linux/bin/blender(ED_undo_push+0x7d) [0x148dfad] /home/georg/blender-git/build_linux/bin/blender() [0x14e0fcb] /home/georg/blender-git/build_linux/bin/blender() [0x14a51cd] /home/georg/blender-git/build_linux/bin/blender() [0x14b6155] /home/georg/blender-git/build_linux/bin/blender() [0xe2757a] /home/georg/blender-git/build_linux/bin/blender() [0xe27bec] /home/georg/blender-git/build_linux/bin/blender(wm_event_do_handlers+0x4ff) [0xe284bf] /home/georg/blender-git/build_linux/bin/blender(WM_main+0x20) [0xe1eb00] /home/georg/blender-git/build_linux/bin/blender(main+0x33e) [0xb2ba6e] /usr/lib/libc.so.6(__libc_start_main+0xf2) [0x7f795d7bd002] /home/georg/blender-git/build_linux/bin/blender(_start+0x2e) [0xb54e4e] ```
Author

Added subscriber: @georgK

Added subscriber: @georgK
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report, I can confirm this. It looks like it can be any material, so no need to download that file.

Thanks for the report, I can confirm this. It looks like it can be any material, so no need to download that file.
Author

Yes, the file is just for convenience.

Yes, the file is just for convenience.

This issue was referenced by ed184050b6

This issue was referenced by ed184050b6e787bbfb218e8ad2a0108172a1b68c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-07-20 15:36:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78958
No description provided.