Fix T78958: Library Override crash: undo make local.